--- a/views/src/App.css
+++ b/views/src/App.css
@@ -26,11 +26,63 @@
 	list-style-type: none;
 }
 
-.LinksList a {
+.LinksList a.link {
+	color: #37474F;
+	font-size: 0.9rem;
+	padding: 2px 3px;
+}
+
+.tagIcon svg {
+	width: 14px;
+	height: 14px;
+	margin: -2px 3px 0 0;
+}
+
+.trashcanIcon svg {
+	width: 14px;
+	height: 14px;
+	margin: -4px 0 0 2px;
+}
+
+.hidden {
+	display: none;
+}
+
+span.tag {
+	background-color: #B0BEC5;
+	border-radius: 10px;
+	padding: 3px 6px;
+	margin: 0 2px;
+	cursor: pointer;
+}
+
+span.tag.edit {
+	background: #C5E1A5;
+}
+
+span.tag.delete {
+	background: #EF5350;
+}
+
+/*span.tag:hover {
+	background: #78909C;
+	color: #111;
+}*/
+
+/*span.tag:hover > a {
+	text-decoration: none;
+	color: #111;
+}*/
+
+span.tag a {
 	color: #37474F;
 }
 
-.LinksList a:hover {
-	color: #ECEFF1;
-	background: #37474F;
+button.addTagButton {
+	font-size: 1.5rem;
+	font-weight: 200;
+	line-height: 1rem;
+	padding: 0 3px 4px;
+	border-radius: 12px;
+	margin-left: 3px;
 }
