--- a/views/src/App.css
+++ b/views/src/App.css
@@ -49,7 +49,7 @@
 }
 
 span.tag {
-	background-color: #B0BEC5;
+	/*background-color: #B0BEC5;*/
 	border-radius: 10px;
 	padding: 3px 6px;
 	margin: 0 2px;
@@ -85,4 +85,23 @@ button.addTagButton {
 	padding: 0 3px 4px;
 	border-radius: 12px;
 	margin-left: 3px;
+}
+
+.colorItems {
+
+}
+
+.colorItem {
+	width: 20px;
+	height: 20px;
+	margin: 0 13.4px!important;
+}
+
+.colorItem:hover {
+	border: 2px solid #666;
+	cursor: pointer;
+}
+
+.colorItem.active {
+	border: 2px solid #666;
 }
