--- a/views/src/App.css
+++ b/views/src/App.css
@@ -51,9 +51,10 @@
 span.tag {
 	border-radius: 10px;
 	padding: 3px 6px;
-	margin: 0 3px;
+	margin: 5px;
 	cursor: pointer;
-	white-space: nowrap;
+	/*white-space: nowrap;*/
+	display: inline-block;
 }
 
 /*span.tag.edit {
